--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,9 @@ img {
     display: block;
 }
 
-textarea { resize: none; }
+textarea {
+    resize: none;
+}
 
 /*reset*/
 .link {
@@ -550,12 +552,19 @@ p {
     margin: 0 auto;
     cursor: pointer;
     border-radius: 4px;
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.04em;
     color: var(--color-white);
     min-width: 165px;
     height: 40px;
     transition-property: background;
     transition-duration: var(--time-set);
     transition-timing-function: var(--timing-function);
+
 }
 
 .subscribe-btn:focus,
@@ -566,24 +575,27 @@ p {
 .subscribe-icon {
     margin-left: 16px;
 }
-.subscribe-email{
+
+.subscribe-email {
     width: 264px;
     height: 40px;
     border: 1px solid var(--color-white);
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-border-radius: 4px;
-background-color: var(--color-navy-blue);
-padding: 8px 16px;
-font-weight: 400;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: var(--color-navy-blue);
+    padding: 8px 16px;
+    font-weight: 400;
     font-size: 12px;
     line-height: 2.0;
-   color: var(--color-white);
+    color: var(--color-white);
 }
+
 .subscribe-email::placeholder {
     font-weight: 400;
     font-size: 12px;
     line-height: 2.0;
-   color: var(--color-white);}
+    color: var(--color-white);
+}
 
 /*portfolio*/
 .section-button {
@@ -731,7 +743,7 @@ font-weight: 400;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    padding: 72px 24px 24px;
 }
 
 .window-button {
@@ -788,10 +800,6 @@ label.contact-accept {
     gap: 8px;
 }
 
-.contact-section {
-    padding: 72px 24px 24px;
-}
-
 .contact-header {
     display: inline-block;
     color: var(--color-navy-blue);
@@ -809,31 +817,44 @@ label.contact-accept {
     transition-property: outline-color;
     transition-duration: var(--time-set);
     transition-timing-function: var(--timing-function);
-    }
+}
 
-    .contact-size {outline-color: var(--color-iris) ;}
-.contact-size:focus + .name-icon {fill: var(--color-iris);}
-.contact-size:focus + .tel-icon {fill: var(--color-iris);}
-.contact-size:focus + .email-icon {fill: var(--color-iris);}
+.contact-size {
+    outline-color: var(--color-iris);
+}
+
+.contact-size:focus+.name-icon {
+    fill: var(--color-iris);
+}
+
+.contact-size:focus+.tel-icon {
+    fill: var(--color-iris);
+}
+
+.contact-size:focus+.email-icon {
+    fill: var(--color-iris);
+}
 
 
 
 .contact-comment {
-width: 360px;
-height: 120px;
-padding: 8px 16px;
-border-radius: 4px;
-font-weight: 400;
-font-size: 12px;
-line-height:1.17;
-
-}
-.contact-comment::placeholder{
+    width: 360px;
+    height: 120px;
+    padding: 8px 16px;
+    border-radius: 4px;
     font-weight: 400;
     font-size: 12px;
-    line-height:1.17;
-    letter-spacing: 0.04em;  
-    color: var(--color-navy-blue-modal);}
+    line-height: 1.17;
+
+}
+
+.contact-comment::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--color-navy-blue-modal);
+}
 
 .contact-note {
     font-style: normal;
@@ -845,16 +866,22 @@ line-height:1.17;
 
 .contact-field-name {
     margin-top: 16px;
-   
-}
-.contact-name, .contact-phone, .contact-email
- {position: relative;}
+    position: relative;
 
-.name-icon, .tel-icon, .email-icon {position: absolute;
-top:50%;
-left: 16px;
-transform: translateY(-50%);
-transition-property: fill;
+}
+
+.contact-phone,
+.contact-email {
+    position: relative;
+}
+
+.name-icon,
+.tel-icon,
+.email-icon {
+    position: absolute;
+    top: 26px;
+    left: 16px;
+    transition-property: fill;
     transition-duration: var(--time-set);
     transition-timing-function: var(--timing-function)
 }
@@ -864,7 +891,7 @@ transition-property: fill;
 }
 
 .contact-field-accept {
-     margin-top: 16px;
+    margin-top: 16px;
     margin-bottom: 24px;
 }
 
@@ -896,36 +923,39 @@ transition-property: fill;
 .contact-button:hover {
     background-color: var(--color-ocean);
 }
-.contact-accept-box 
-{appearance: none;
-width: 16px;
-height: 16px;
-left: 20px;
-top: 20px;
-border: 1px solid rgba(46, 47, 66, 0.4); 
-border-radius: 2px;
-background-image: url("data:image/svg+xml,%3Csvg width='10' height='8' viewBox='0 0 10 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.44558 0.255056C8.61838 0.089653 8.84834 -0.00178848 9.08693 2.65108e-05C9.32551 0.0018415 9.55407 0.0967713 9.72436 0.264784C9.89466 0.432797 9.99337 0.660752 9.99968 0.900549C10.006 1.14034 9.91939 1.37323 9.75816 1.55005L4.86357 7.70436C4.7794 7.79551 4.67782 7.86865 4.5649 7.91942C4.45198 7.97018 4.33003 7.99754 4.20636 7.99984C4.08268 8.00214 3.95981 7.97935 3.8451 7.93282C3.73038 7.88629 3.62618 7.81698 3.53872 7.72903L0.292827 4.46564C0.202435 4.38096 0.129933 4.27884 0.0796475 4.16537C0.0293621 4.05191 0.00232279 3.92942 0.000143182 3.80522C-0.00203643 3.68102 0.0206883 3.55765 0.0669613 3.44248C0.113234 3.3273 0.182108 3.22267 0.269473 3.13483C0.356838 3.047 0.460905 2.97775 0.575465 2.93123C0.690026 2.88471 0.812734 2.86186 0.936267 2.86405C1.0598 2.86624 1.18163 2.89343 1.29449 2.94398C1.40734 2.99454 1.50892 3.06743 1.59315 3.15831L4.16189 5.73967L8.42227 0.28219C8.42994 0.272694 8.43813 0.263635 8.4468 0.255056H8.44558Z' fill='%23F4F4FD'/%3E%3C/svg%3E");
-background-position: center;
-background-repeat: no-repeat;
-background-size: 0;
-transition-property:background-color, border, background-size;
+
+.contact-accept-box {
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    left: 20px;
+    top: 20px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    background-image: url("data:image/svg+xml,%3Csvg width='10' height='8' viewBox='0 0 10 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.44558 0.255056C8.61838 0.089653 8.84834 -0.00178848 9.08693 2.65108e-05C9.32551 0.0018415 9.55407 0.0967713 9.72436 0.264784C9.89466 0.432797 9.99337 0.660752 9.99968 0.900549C10.006 1.14034 9.91939 1.37323 9.75816 1.55005L4.86357 7.70436C4.7794 7.79551 4.67782 7.86865 4.5649 7.91942C4.45198 7.97018 4.33003 7.99754 4.20636 7.99984C4.08268 8.00214 3.95981 7.97935 3.8451 7.93282C3.73038 7.88629 3.62618 7.81698 3.53872 7.72903L0.292827 4.46564C0.202435 4.38096 0.129933 4.27884 0.0796475 4.16537C0.0293621 4.05191 0.00232279 3.92942 0.000143182 3.80522C-0.00203643 3.68102 0.0206883 3.55765 0.0669613 3.44248C0.113234 3.3273 0.182108 3.22267 0.269473 3.13483C0.356838 3.047 0.460905 2.97775 0.575465 2.93123C0.690026 2.88471 0.812734 2.86186 0.936267 2.86405C1.0598 2.86624 1.18163 2.89343 1.29449 2.94398C1.40734 2.99454 1.50892 3.06743 1.59315 3.15831L4.16189 5.73967L8.42227 0.28219C8.42994 0.272694 8.43813 0.263635 8.4468 0.255056H8.44558Z' fill='%23F4F4FD'/%3E%3C/svg%3E");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 0;
+    transition-property: background-color, border, background-size;
     transition-duration: var(--time-set);
     transition-timing-function: var(--timing-function);
-    
+
 
 }
-.contact-accept-box:checked
 
-{background-color: var(--color-ocean);
+.contact-accept-box:checked {
+    background-color: var(--color-ocean);
     border: 1px solid var(--color-ocean);
     background-size: 10px;
-  }
+}
 
 
 
-.contact-box {display: flex;
+.contact-box {
+    display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center
+    justify-content: center;
+    align-items: center;
 
 }
